Implemented new/updated requirements.

--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -46,7 +46,7 @@
                 </iframe>
             </div>
         </section>
-        <section class="col-12 tab-pane fade" id="nav-1" role="tabpanel" aria-labelledby="nav-tab-1">
+        <section class="w-100 tab-pane fade" id="nav-1" role="tabpanel" aria-labelledby="nav-tab-1">
             <p>
                 Chcete získat podklady pro jednotlivé exkurze? Po kliknutí na daný podnik se Vám otevře stránka, na které můžete získat jednotlivé dokumenty a zjistit
                 zajímavé informace o daných podnicích.
