--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -28,10 +28,10 @@
     {% endif %}
     <article class="row mt-1 mb-3 g-5 justify-content-md-center tab-content" id="nav-tabContent">
         <section class="col-12 tab-pane fade show active" id="nav-0" role="tabpanel" aria-labelledby="nav-tab-0">
-            <p style="z-index: 10">
+            <p>
                 V této mapě jsou uvedeny jednotlivé chemické podniky. Po kliknutí na daný bod můžete získat stručné informace o podniku a o exkurzích, které podnik poskytuje.
             </p>
-            <p style="z-index: 10">
+            <p>
                 Chcete-li získat materiály pro dané exkurze, přejděte na kartu – podklady pro exkurze.
             </p>
             <div class="ratio ratio-1x1">
@@ -39,7 +39,7 @@
                 <iframe src="https://storymaps.arcgis.com/stories/c3a96e21120e4b8484660bafdde7660d"
                         id="interactive-map"
                         allowfullscreen
-                        style="border: 0 none; width: 100%; overflow: hidden; margin-top: -5em; margin-bottom: -2em;"
+                        style="border: 0 none; width: 100%; overflow: hidden;"
                         scrolling="no"
                         allow="geolocation">
                     Interaktivní mapa chemických podniků se načítá...
