--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -51,23 +51,25 @@
                 Chcete získat podklady pro jednotlivé exkurze? Po kliknutí na daný podnik se Vám otevře stránka, na které můžete získat jednotlivé dokumenty a zjistit
                 zajímavé informace o daných podnicích.
             </p>
-            {% for company in companies %}
-                <article class="col-12 col-md-6 col-lg-4">
-                    <a class="card signpost-card border-0 h-100 text-dark text-decoration-none" href="{{ company.path }}">
-                        {% set image_src = company.logo|default(company.thumbnail.src|default) %}
-                        {% if image_src|default %}
-                            <div class="w-100 card-img card-img-top mx-auto mt-4 ratio ratio-16x9 rounded rounded-2"
-                                 style="background-image: url({{ image_src }})">
+            <nav class="row">
+                {% for company in companies %}
+                    <article class="col-12 col-md-6 col-lg-4">
+                        <a class="card signpost-card border-0 h-100 text-dark text-decoration-none" href="{{ company.path }}">
+                            {% set image_src = company.logo|default(company.thumbnail.src|default) %}
+                            {% if image_src|default %}
+                                <div class="w-100 card-img card-img-top mx-auto mt-4 ratio ratio-16x9 rounded rounded-2"
+                                     style="background-image: url({{ image_src }})">
+                                </div>
+                            {% endif %}
+                            <div class="card-body d-flex flex-column align-middle justify-content-center" style="min-height: 6em;">
+                                <h5 class="card-title text-center">
+                                    {{ company.title }}
+                                </h5>
                             </div>
-                        {% endif %}
-                        <div class="card-body d-flex flex-column align-middle justify-content-center" style="min-height: 6em;">
-                            <h5 class="card-title text-center">
-                                {{ company.title }}
-                            </h5>
-                        </div>
-                    </a>
-                </article>
-            {% endfor %}
+                        </a>
+                    </article>
+                {% endfor %}
+            </nav>
         </section>
 
     </article>
