--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -51,7 +51,7 @@
                 Chcete získat podklady pro jednotlivé exkurze? Po kliknutí na daný podnik se Vám otevře stránka, na které můžete získat jednotlivé dokumenty a zjistit
                 zajímavé informace o daných podnicích.
             </p>
-            <nav class="row">
+            <nav class="row mt-3 mb-5 g-5 justify-content-md-center">
                 {% for company in companies %}
                     <article class="col-12 col-md-6 col-lg-4">
                         <a class="card signpost-card border-0 h-100 text-dark text-decoration-none" href="{{ company.path }}">
