--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -58,7 +58,7 @@
                             {% set image_src = get_image(company.meta('_company_logo')).src|default(company.thumbnail.src|default) %}
                             {% if image_src|default %}
                                 <div class="w-100 card-img card-img-top mx-auto mt-4 ratio ratio-16x9 rounded rounded-2"
-                                     style="background-image: url({{ image_src }})">
+                                     style="background-image: url({{ image_src }}); background-size: contain;">
                                 </div>
                             {% endif %}
                             <div class="card-body d-flex flex-column align-middle justify-content-center" style="min-height: 6em;">
