--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -53,7 +53,7 @@
             </p>
             <nav class="row mt-3 mb-5 g-5 justify-content-md-center">
                 {% for company in companies %}
-                    <article class="col-12 col-md-6 col-lg-4">
+                    <article class="col-12 col-md-6 col-lg-4 col-xl-3">
                         <a class="card signpost-card border-0 h-100 text-dark text-decoration-none" href="{{ company.path }}">
                             {% set image_src = get_image(company.meta('_company_logo')).src|default(company.thumbnail.src|default) %}
                             {% if image_src|default %}
