--- a/views/single-customs/single-chemical_element.html.twig
+++ b/views/single-customs/single-chemical_element.html.twig
@@ -16,8 +16,9 @@
 
     {% if post.children|length > 0 %}
         <nav class="nav row p-0 rounded-tabs" id="nav-tab">
+            {% set iter = 0 %}
             {% for index, tab in post.children %}
-                {% set active = index < 1 ? 'active' : '' %}
+                {% set active = iter < 1 ? 'active' : '' %}
                 <button class="rounded-tab col m-0 mt-3 mx-1 px-5 px-xl-4 py-2 border border-2 border-primary {{ active }}"
                         id="nav-tab-{{ index }}"
                         data-bs-toggle="tab"
@@ -25,20 +26,23 @@
                         type="button"
                         role="tab"
                         aria-controls="nav-{{ index }}"
-                        aria-selected="{{ index < 1 ? 'true' : 'false' }}">
+                        aria-selected="{{ iter < 1 ? 'true' : 'false' }}">
                     {{ tab.title }}
                 </button>
+                {% set iter = iter + 1 %}
             {% endfor %}
         </nav>
         <section class="row my-5">
             <div class="tab-content col-12" id="nav-tabContent">
+                {% set iter = 0 %}
                 {% for index, tab in post.children %}
-                    <div class="tab-pane fade {{ index < 1 ? ' show active' : '' }}"
+                    <div class="tab-pane fade {{ iter < 1 ? ' show active' : '' }}"
                          id="nav-{{ index }}"
                          role="tabpanel"
-                         aria-labelledby="nav-tab-{{ index }}">
+                         aria-labelledby="nav-tab-{{ iter }}">
                         {{ tab.content }}
                     </div>
+                    {% set iter = iter + 1 %}
                 {% endfor %}
             </div>
         </section>
