--- a/views/single-customs/single-chemical_element.html.twig
+++ b/views/single-customs/single-chemical_element.html.twig
@@ -1,5 +1,25 @@
 {% extends "post-types/page.html.twig" %}
 
+{% set imageSrc = image.src|default(site.theme.link ~ '/images/photos/foto.png') %}
+
+{% block article_header %}
+    <header class="row page-banner bg-primary text-white mb-3 border border-primary border-2">
+
+        <div class="col-2 bg-white">
+        </div>
+
+        <div class="col-8">
+            <h1 class="d-none">{{ site.name }}</h1>
+            <h2 class="p-3 text-capitalize">{{- post.title ?? 'Stránka nenalezena' -}}</h2>
+        </div>
+
+        <div class="col-2 d-flex flex-column justify-content-center text-center align-items-center bg-white">
+            <img alt="{{- post.title ?? 'Obrázek prvku' -}}" class="img-fluid m-auto" src="{{ imageSrc }}">
+        </div>
+
+    </header>
+{% endblock %}
+
 {% block article_signpost %}
 {% endblock %}
 
