--- a/views/single-customs/single-chemical_element.html.twig
+++ b/views/single-customs/single-chemical_element.html.twig
@@ -8,7 +8,7 @@
         <div class="col-1 bg-white">
         </div>
 
-        <div class="col-8 d-flex flex-column justify-content-center text-center align-items-center bg-white">
+        <div class="col-10 d-flex flex-column justify-content-center text-center align-items-center">
             <h1 class="d-none">{{ site.name }}</h1>
             <h2 class="p-3 text-capitalize">{{- post.title ?? 'Stránka nenalezena' -}}</h2>
         </div>
