Implemented new/updated requirements.

--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -29,6 +29,12 @@ a {
 
 .footer-eu-msmt-image {
   max-height: 6em;
+  @media all and (max-width: 900px) {
+    max-height: 5em;
+  }
+  @media all and (max-width: 700px) {
+    max-height: 4em;
+  }
 }
 
 .page-banner {
