Implemented new/updated requirements.

--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -27,7 +27,7 @@ a {
   }
 }
 
-.footer-eu-msmt-image {
+.footer-eu-msmt-image, .footer-eu-eu-msmt-widget-image {
   max-height: 6em;
   @media all and (max-width: 900px) {
     max-height: 5em;
