--- a/theme/styles/interactive-periodical-table.scss
+++ b/theme/styles/interactive-periodical-table.scss
@@ -54,7 +54,10 @@
     margin-left: auto;
   }
 
-  .element {
+}
+
+
+.periodical-table-element {
     overflow: hidden;
     background-color: grey;
     color: inherit;
@@ -66,7 +69,7 @@
                     0 calc(100% - 1em) /* bottom left */
     );
 
-    .element-content {
+    .periodical-table-element-content {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -114,13 +117,10 @@
     }
 
     &:hover {
-      .element-content {
+      .periodical-table-element-content {
         background-color: rgba(255, 255, 255, 0.7);
       }
     }
 
   }
-
-}
-
 
