--- a/views/single-customs/single-industry-field.html.twig
+++ b/views/single-customs/single-industry-field.html.twig
@@ -14,10 +14,11 @@
         </section>
     {% endif %}
 
-    {% if post.tabs|length > 0 %}
+    {% if post.children|length > 0 %}
+        {% set iter = 0 %}
         <nav class="nav row p-0 rounded-tabs" id="nav-tab">
-            {% for index, tab in post.tabs %}
-                {% set active = index < 1 ? 'active' : '' %}
+            {% for index, tab in post.children %}
+                {% set active = iter < 1 ? 'active' : '' %}
                 <button class="rounded-tab col m-0 mt-3 mx-1 px-5 px-xl-4 py-2 border border-2 border-primary {{ active }}"
                         id="nav-tab-{{ index }}"
                         data-bs-toggle="tab"
@@ -25,20 +26,23 @@
                         type="button"
                         role="tab"
                         aria-controls="nav-{{ index }}"
-                        aria-selected="{{ index < 1 ? 'true' : 'false' }}">
-                    {{ tab.tab_title }}
+                        aria-selected="{{ iter < 1 ? 'true' : 'false' }}">
+                    {{ tab.title }}
                 </button>
+                {% set iter = iter + 1 %}
             {% endfor %}
         </nav>
         <section class="row my-5">
             <div class="tab-content col-12" id="nav-tabContent">
-                {% for index, tab in post.tabs %}
-                    <div class="tab-pane fade {{ index < 1 ? ' show active' : '' }}"
+                {% set iter = 0 %}
+                {% for index, tab in post.children %}
+                    <div class="tab-pane fade {{ iter < 1 ? ' show active' : '' }}"
                          id="nav-{{ index }}"
                          role="tabpanel"
                          aria-labelledby="nav-tab-{{ index }}">
-                        {{ tab.tab_content }}
+                        {{ tab.content }}
                     </div>
+                    {% set iter = iter + 1 %}
                 {% endfor %}
             </div>
         </section>
