--- a/views/post-types/teach_material.html.twig
+++ b/views/post-types/teach_material.html.twig
@@ -2,6 +2,32 @@
 
 {% block article_content %}
     <!-- VYUKOVY MATERIAL -->
+
+    {% if post.meta('_youtube_video_url') %}
+        <div class="row my-2">
+            <div class="col-12 col-md-2 d-flex flex-column align-items-center justify-content-center">
+                {% for symbol in post.difficultySymbols %}
+                    <img src="{{ symbol.symbol.src }}" alt="Náročnost experimentu">
+                {% endfor %}
+            </div>
+            <div class="col-12 col-md-8">
+                <!--suppress HtmlDeprecatedAttribute -->
+                <iframe class="w-100 ratio ratio-16x9"
+                        src="https://www.youtube.com/embed/{{ post.meta('_youtube_video_url') }}"
+                        title="{{ post.title }}"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen>
+                </iframe>
+            </div>
+            <div class="col-12 col-md-2">
+                {% for symbol in post.safetySymbols %}
+                    <img src="{{ symbol.symbol.src }}" alt="Bezpečnostní pokyny">
+                {% endfor %}
+            </div>
+        </div>
+    {% endif %}
+
     {% if (post.content|default and post.content|length > 0) or (content|default and content|length > 0) %}
         <div class="row my-5">
             <div class="col-12 text-justify">
