--- a/views/custom-templates/teach_material_cat_videos.html.twig
+++ b/views/custom-templates/teach_material_cat_videos.html.twig
@@ -33,15 +33,15 @@
 
     {% for material in materials %}
         <section class="row my-5 bg-light">
-            <div class="col-12 col-md-2 d-flex align-items-start flex-column">
+            <div class="col-12 col-md-8 d-flex align-items-start flex-column">
                 <a href="{{ material.link }}" class="text-dark text-decoration-none">
                     <h3>{{ material.title }}</h3>
                 </a>
                 <div style="text-align: justify;">
-                    {{ material.excerpt }}
+                    {{ material.post_excerpt }}
                 </div>
             </div>
-            <div class="col-12 col-md-4 col-lg-3 d-flex flex-column justify-content-center order-lg-first">
+            <div class="col-12 col-md-2 col-lg-3 d-flex flex-column justify-content-center order-lg-first">
                 {% set image_src = material.thumbnail.src|default(get_image(material.meta('_menu_image')).src|default) %}
                 {% if image_src|default and image_src|length > 0 %}
                     <a href="{{ material.link }}" title="{{ material.title }}" class="mb-3">
