--- a/views/custom-templates/teach_material_cat_videos.html.twig
+++ b/views/custom-templates/teach_material_cat_videos.html.twig
@@ -32,7 +32,7 @@
     {% endif %}
 
     {% for material in materials %}
-        <section class="row my-5 bg-light">
+        <section class="row my-5 py-3 bg-dark bg-opacity-25">
             <div class="col-12 col-md-8 d-flex align-items-start flex-column">
                 <a href="{{ material.link }}" class="text-dark text-decoration-none">
                     <h3>{{ material.title }}</h3>
