--- a/views/custom-templates/teach_material_cat_videos.html.twig
+++ b/views/custom-templates/teach_material_cat_videos.html.twig
@@ -44,7 +44,7 @@
             <div class="col-12 col-md-2 col-lg-3 d-flex flex-column justify-content-center order-lg-first">
                 {% set image_src = material.thumbnail.src|default(get_image(material.meta('_menu_image')).src|default) %}
                 {% if image_src|default and image_src|length > 0 %}
-                    <a href="{{ material.link }}" title="{{ material.title }}" class="mb-3">
+                    <a href="{{ material.link }}" title="{{ material.title }}">
                         <img class="d-block img-fluid w-100 mh-100 p-2" src="{{ image_src }}" alt="{{ material.thumbnail.alt }}">
                     </a>
                 {% endif %}
