--- a/views/custom-templates/teach_material_cat_videos.html.twig
+++ b/views/custom-templates/teach_material_cat_videos.html.twig
@@ -33,7 +33,7 @@
 
     {% for material in materials %}
         <section class="row my-5 py-3 bg-dark bg-opacity-10">
-            <div class="col-12 col-md-8 col-lg-7 d-flex align-items-start flex-column">
+            <div class="col-12 col-md-8 col-lg-6 d-flex align-items-start flex-column">
                 <a href="{{ material.link }}" class="text-dark text-decoration-none">
                     <h3>{{ material.title }}</h3>
                 </a>
@@ -49,7 +49,7 @@
                     </a>
                 {% endif %}
             </div>
-            <div class="col-12 col-md-2">
+            <div class="col-12 col-md-2 col-lg-3">
 
             </div>
         </section>
