Implemented new/updated requirements.

--- a/views/custom-templates/teach_material_cat_videos.html.twig
+++ b/views/custom-templates/teach_material_cat_videos.html.twig
@@ -50,7 +50,7 @@
                 {% endif %}
             </div>
             <div class="col-12 col-md-2 col-lg-3 d-flex flex-row justify-content-center align-items-center">
-                {% for symbol in post.difficultySymbols %}
+                {% for symbol in material.difficultySymbols %}
                     <img src="{{ symbol.symbol.src }}" alt="Náročnost experimentu">
                 {% endfor %}
             </div>
