--- a/views/custom-templates/teach_material_cat_videos.html.twig
+++ b/views/custom-templates/teach_material_cat_videos.html.twig
@@ -51,7 +51,7 @@
             </div>
             <div class="col-12 col-md-2 col-lg-3 d-flex flex-row justify-content-center align-items-center">
                 {% for symbol in material.difficultySymbols %}
-                    <img src="{{ get_image(symbol.symbol).src }}" alt="Náročnost experimentu">
+                    <img class="d-block img-fluid" src="{{ get_image(symbol.symbol).src }}" alt="Náročnost experimentu">
                 {% endfor %}
             </div>
         </section>
