--- a/views/post-types/teach_material.html.twig
+++ b/views/post-types/teach_material.html.twig
@@ -12,15 +12,17 @@
                     </div>
                 {% endfor %}
             </div>
-            <div class="col-12 col-md-8 ratio ratio-16x9">
-                <!--suppress HtmlDeprecatedAttribute -->
-                <iframe class="w-100 h-100"
-                        src="https://www.youtube.com/embed/{{ post.meta('_youtube_video_url') }}"
-                        title="{{ post.title }}"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen>
-                </iframe>
+            <div class="col-12 col-md-8">
+                <div class="w-100 ratio ratio-16x9">
+                    <!--suppress HtmlDeprecatedAttribute -->
+                    <iframe class="w-100"
+                            src="https://www.youtube.com/embed/{{ post.meta('_youtube_video_url') }}"
+                            title="{{ post.title }}"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                    </iframe>
+                </div>
             </div>
             <div class="col-12 col-md-2">
                 {% for symbol in post.safetySymbols %}
