--- a/views/post-types/teach_material.html.twig
+++ b/views/post-types/teach_material.html.twig
@@ -24,7 +24,7 @@
                     </iframe>
                 </div>
             </div>
-            <div class="col-12 col-md-2">
+            <div class="col-12 col-md-2 d-flex flex-column align-items-center justify-content-center">
                 {% for symbol in post.safetySymbols %}
                     <div class="p-3">
                         <img src="{{ get_image(symbol.symbol).src }}" class="img-fluid" alt="Bezpečnostní pokyny">
