Implemented new/updated requirements.

--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -1,5 +1,6 @@
 $rfs-base-value: 0.8rem;
 
+@import "wordpress_core";
 @import "bootstrap-up";
 @import "interactive-periodical-table";
 @import "~swiper/swiper-bundle.min.css";
