--- a/views/post-types/teach_material_cat.html.twig
+++ b/views/post-types/teach_material_cat.html.twig
@@ -13,6 +13,7 @@
 
     {% if subtypes|length > 1 %}
         <div class="row px-2 mt-0 mb-0" style="line-height: 1.1;">
+            <!-- {{ subtype }} -->
             {% for oneSubType in subtypes %}
                 <!-- ONE SUBTYPE -->
                 {% set classes_common = "d-flex col m-0 mt-3 mx-1 px-5 px-xl-4 py-2 text-center align-items-center justify-content-center" %}
