Implemented new/updated requirements.

--- a/views/post-parts/periodical-table/interactive-periodical-table.html.twig
+++ b/views/post-parts/periodical-table/interactive-periodical-table.html.twig
@@ -29,10 +29,10 @@
                     <span class="symbol">
                         {{ element.symbol }}
                     </span>
-                    <span class="name d-none d-md-block">
+                    <span class="name d-none d-lg-block">
                         {{ element.nameCz }}
                     </span>
-                    <span class="atomic-weight d-none d-md-block">
+                    <span class="atomic-weight d-none d-lg-block">
                         {{ element.relativeAtomicWeight }}
                     </span>
                     <span class="d-md-none"></span>
