--- a/views/post-parts/layout/main-banner-row.html.twig
+++ b/views/post-parts/layout/main-banner-row.html.twig
@@ -1,14 +1,14 @@
 {% set imageSrc = image.src|default(site.theme.link ~ '/images/photos/foto.png') %}
 
 <header class="row page-banner bg-primary text-white mb-3 border border-primary border-2">
-    <div class="d-flex col-12 col-lg-6 {{ isHome ? '' : 'col-xl-5' }} image-box m-0 p-0">
-        <img alt="CHEMIE ŽIJE!" class="img-fluid m-auto" src="{{ imageSrc }}">
+    <div class="d-flex col-12 col-lg-5 m-0 p-0 ratio ratio-16x9"
+         style="background-position: center center; background-size: cover; background-image: url({{ imageSrc }})">
     </div>
-    <div class="col-12 col-lg-6 {{ isHome ? '' : 'col-xl-7' }} title-box d-flex flex-column justify-content-center text-center">
-        <h1 class="p-5 pt-3 text-capitalize {{ isHome ? ' single-heading ' : ' pb-2 ' }}">
+    <div class="col-12 col-lg-7 title-box d-flex flex-column justify-content-center text-center">
+        <h1 class="px-5 py-3 text-capitalize {{ isHome ? ' single-heading ' : ' ' }}">
             {{ site.name }}
         </h1>
-        <h2 class="p-5 pt-2 pb-3 {{ isHome ? ' d-none ' : '' }}">
+        <h2 class="px-5 pt-2 pb-3 {{ isHome ? ' d-none ' : '' }}">
             {#
             {%- if post.type.labels.name_as_subtitle|default or subtitle -%}
                 <small class="d-block pb-3">
