--- a/views/single-customs/single-chemical_element.html.twig
+++ b/views/single-customs/single-chemical_element.html.twig
@@ -43,7 +43,7 @@
 
 {% block article_content %}
     {% if post.content|default %}
-        <section class="row my-3">
+        <section class="row mt-5 my-3">
             <div class="col-12">
                 <div>
                     {{ post.content }}
