--- a/views/post-parts/layout/main-banner-row.html.twig
+++ b/views/post-parts/layout/main-banner-row.html.twig
@@ -1,8 +1,10 @@
 {% set imageSrc = image.src|default(site.theme.link ~ '/images/photos/foto.png') %}
 
 <header class="row page-banner bg-primary text-white mb-3 border border-primary border-2">
-    <div class="d-flex col-12 col-lg-5 m-0 p-0 ratio ratio-16x9"
-         style="background-position: center center; background-size: cover; background-image: url({{ imageSrc }})">
+    <div class="d-flex col-12 col-lg-5 m-0 p-0">
+        <div class="ratio ratio-16x9"
+             style="background-position: center center; background-size: cover; background-image: url({{ imageSrc }})">
+        </div>
     </div>
     <div class="col-12 col-lg-7 title-box d-flex flex-column justify-content-center text-center">
         <h1 class="px-5 py-3 text-capitalize {{ isHome ? ' single-heading ' : ' ' }}">
