Implemented new/updated requirements.

--- a/views/custom-templates/teach_material_cat_photos.html.twig
+++ b/views/custom-templates/teach_material_cat_photos.html.twig
@@ -9,43 +9,11 @@
         </div>
     {% endif %}
 
-    <div class="row px-3 mt-0 mb-0" style="line-height: 1.1;">
-        {% for oneSubType in subtypes %}
-            <!-- ONE SUBTYPE -->
-            {% set classes_common = "d-flex col m-0 mt-3 mx-1 px-5 px-xl-4 py-2 text-center align-items-center justify-content-center" %}
-            {% set classes_border = "border border-2 border-primary" %}
-            {% set classes = classes_common ~ " " ~ classes_border %}
-            {% if subtype == oneSubType.slug %}
-                <a class="{{ classes }} bg-white text-primary" href="?oblast={{ oneSubType.slug }}"
-                   style="border-top-left-radius: 1.2em !important; border-top-right-radius: 1.2em !important;">
-                    <strong>{{ oneSubType.name }}</strong>
-                </a>
-            {% else %}
-                <a class="{{ classes }} bg-primary text-white" href="?oblast={{ oneSubType.slug }}"
-                   style="border-top-left-radius: 1.2em !important; border-top-right-radius: 1.2em !important;">
-                    {{ oneSubType.name }}
-                </a>
-            {% endif %}
-        {% endfor %}
-    </div>
+    {% include 'navigations/sub-tabs/sub-tabs.html.twig' %}
 
     <div class="row mt-0 mb-5 px-2">
         {% for material in materials %}
-            <article class="col-12 col-sm-6 col-md-4 col-lg-3">
-                {% set image_src = material.thumbnail.src|default(get_image(material.meta('_menu_image')).src|default) %}
-                <a class="card border-0 h-100 text-dark text-decoration-none flex-column d-flex flex-nowrap" href="{{ image_src }}">
-                    {% if image_src|default and image_src|length > 0 %}
-                        <div class="card-img-top mx-auto mt-3">
-                            <img class="d-block w-100 mh-100 p-2 img-thumbnail" src="{{ image_src }}" alt="{{ material.thumbnail.alt }}">
-                        </div>
-                    {% endif %}
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title text-center">
-                            {{ material.title }}
-                        </h5>
-                    </div>
-                </a>
-            </article>
+            {% include 'post-previews/_photo_preview_vertical.twig' with {post: material} %}
         {% endfor %}
         {% if materials|length < 1 %}
             <article class="col-12 mt-5">
