--- a/views/custom-templates/chemical-industry-materials.html.twig
+++ b/views/custom-templates/chemical-industry-materials.html.twig
@@ -7,30 +7,16 @@ This page theme can be selected as custom theme of single "page" type post (due 
 
 {% block page_content %}
     <section class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
-        {% include 'post-parts/layout/main-banner-row.html.twig' with {image: post.thumbnail, title: post.title} %}
+        {% include 'layout/main-banner.html.twig' with {image: post.thumbnail, title: post.title} %}
         {% for element in elements %}
-            <article class="row mt-3 mb-5">
-                <div class="col-12 col-md-8 col-lg-9 d-flex align-items-start flex-column">
-                    <a href="{{ element.link }}" class="text-dark text-decoration-none">
-                        <h3>{{ element.title }}</h3>
-                    </a>
-                    <main style="text-align: justify;">
-                        {{ element.content }}
-                    </main>
-                    <nav class="mt-auto">
-                        [<a href="{{ element.link }}" title="{{ element.title }}">více informací</a>]
-                    </nav>
-                </div>
-                {% if post.meta('_material_image').src|default %}
-                    <div class="col-12 col-md-4 col-lg-3 d-flex flex-column justify-content-center">
-                        <a href="{{ element.link }}" title="{{ element.title }}">
-                            <img class="d-block w-100 mh-100 p-2 img-thumbnail"
-                                 src="{{ get_image(post.meta('_material_image')).src }}"
-                                 alt="{{ get_image(post.meta('_material_image')).alt }}">
-                        </a>
-                    </div>
-                {% endif %}
-            </article>
+            {% include 'post-previews/_post_preview_horizontal.html.twig' with {post: element} %}
         {% endfor %}
     </section>
+    {% if (post.content|default and post.content|length > 0) or (content|default and content|length > 0) %}
+        <section class="row my-5">
+            <div class="col-12">
+                {{ post.content|default(content|default) }}
+            </div>
+        </section>
+    {% endif %}
 {% endblock page_content %}
