--- a/views/layout/footer.html.twig
+++ b/views/layout/footer.html.twig
@@ -19,7 +19,7 @@
                 {% endif %}
                 {% if menu.footer_left.get_items %}
                     <nav role="navigation">
-                        {% include "post-parts/layout/menu.html.twig" with {'items': menu.footer_left.get_items} %}
+                        {% include "navigations/menu/menu.html.twig" with {'items': menu.footer_left.get_items} %}
                     </nav>
                 {% endif %}
             </aside>
@@ -29,7 +29,7 @@
                 {% endif %}
                 {% if menu.footer_center.get_items %}
                     <nav role="navigation">
-                        {% include "post-parts/layout/menu.html.twig" with {'items': menu.footer_center.get_items} %}
+                        {% include "navigations/menu/menu.html.twig" with {'items': menu.footer_center.get_items} %}
                     </nav>
                 {% endif %}
             </aside>
@@ -39,7 +39,7 @@
                 {% endif %}
                 {% if menu.footer_right.get_items %}
                     <nav role="navigation">
-                        {% include "post-parts/layout/menu.html.twig" with {'items': menu.footer_right.get_items} %}
+                        {% include "navigations/menu/menu.html.twig" with {'items': menu.footer_right.get_items} %}
                     </nav>
                 {% endif %}
             </aside>
