--- a/views/post-types/author.html.twig
+++ b/views/post-types/author.html.twig
@@ -1,4 +1,4 @@
-{% extends "layouts/page-layout.html.twig" %}
+{% extends "page-layout.html.twig" %}
 
 {% block content %}
     {% for post in posts %}
