Implemented new/updated requirements.

--- a/views/post-previews/_post_preview_horizontal.html.twig
+++ b/views/post-previews/_post_preview_horizontal.html.twig
@@ -12,7 +12,7 @@
         <div style="text-align: justify;">
             {{ post.content }}
         </div>
-        <nav class="mt-auto">
+        <nav class="mt-1">
             [<a href="{{ post.link }}" title="{{ post.title }}">více informací</a>]
         </nav>
     </div>
